Mon Nov 30 12:10:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Check that only one of docid and xapid
	  are set in get_document() before entering the while loop.  This
	  fixes a bug where the xapid got set later in the loop, so when a
	  DatabaseModifiedException error happened, the xapid was set the
	  next time around, triggering the error.

Thu Nov 26 17:29:47 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/cached_searches.py: Add
	  Query.merge_with_cached() to make applying a cached query easier.
	  Add a test for this.

Thu Nov 26 12:58:38 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/weight_action.py: Allow norm() to
	  take a maxweight parameter.  Update tests to check this works.

Thu Nov 26 12:54:33 GMT 2009  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update revision numbers.

Thu Nov 26 01:32:29 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
	  xappy/unittests/cachemanager.py: Add a new iter_query_strs()
	  method.

Thu Nov 26 00:17:57 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/queryinvert.py:
	  Fully integrate the numpy-based inversion - caching its results
	  for faster application to many subdatabases, and factoring it out
	  as a MixIn.

Wed Nov 25 10:59:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/__init__.py,xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Release these files under
	  the MIT/X license.

Wed Nov 25 10:52:12 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/queryinvert.py: Some fairly efficient code to
	  invert lists of docids for queries, thanks to Shane for the
	  original implementation.

Tue Nov 24 11:23:02 GMT 2009  Richard Boulton <richard@tartarus.org>
